--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -74,5 +74,8 @@
     <ClInclude Include="array2D.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="MST.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
