--- a/Algorithm/Algorithm.vcxproj.filters
+++ b/Algorithm/Algorithm.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClInclude Include="MST.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="Astar.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
